# dune-bridge

./: .env.example  .gitignore  .pylintrc  Cargo.toml  README.md  Readme.md  mypy.ini
.github/workflow/: pull-request.yaml
.github/workflows/: cla.yaml  deploy.yaml  pull-request.yaml
docker/: Dockerfile.binary  deploy.sh  startup.sh
dune_api_scripts/: constants.py  duneanalytics.py  execute_dune_query_for_all_app_data.py  local_env.py  logging.conf  modify_and_execute_dune_query_for_entire_history_trading_data.py  modify_and_execute_dune_query_for_todays_trading_data.py  modify_and_execute_referral_history.py  pg_client.py  queries.py  query_and_store_distinct_app_data.py  query_and_store_referral_history.py  requirements.txt  store_query_result_all_distinct_app_data.py  store_query_result_for_entire_history_trading_data.py  store_query_result_for_todays_trading_data.py  update_appdata_view.py  utils.py
dune_api_scripts/docker/: Dockerfile.binary
dune_api_scripts/queries/: all_app_data.sql  order_rewards_checksum.sql  parsed_app_data.sql  raw_app_data.sql  retention-complete.sql  retention-on-date.sql  user_generated_aggregated_rewards.sql  user_generated_order_rewards.sql
dune_api_scripts/store/: solver_list.py
dune_api_scripts/tests/: test_utils.py
pysrc/: .pylintrc  Makefile  dune_fetcher.py  dune_queries.py  environment.py  file.py  main.py  requirements.txt
src/: api.rs  app_data_loading.rs  date_de_serialization.rs  dune_data_loading.rs  h160_hexadecimal.rs  health.rs  in_memory_maintenance.rs  lib.rs  main.rs  models.rs  referral_maintenance.rs
(+25 files in other folders)
